tests/ui/image/query/query_levels_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>: HasQueryLevels` is not satisfied
   --> $DIR/query_levels_err.rs:12:21
    |
12  |     *output = image.query_levels();
    |                     ^^^^^^^^^^^^ the trait `HasQueryLevels` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>`
    |
    = help: the following other types implement trait `HasQueryLevels`:
              Image<SampledType, 0, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 1, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 2, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 3, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_levels`
   --> $SPIRV_STD_SRC/image.rs:901:15
    |
899 |     pub fn query_levels(&self) -> u32
    |            ------------ required by a bound in this associated function
900 |     where
901 |         Self: HasQueryLevels,
    |               ^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_levels`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
